tests/ui/derives/no-ice-on-path-style-derive-macro.stderr
error[E0433]: cannot find derive macro `Anything` in trait `Foo`
  --> $DIR/no-ice-on-path-style-derive-macro.rs:3:10
   |
LL | #[derive(Foo::Anything)]
   |          ^^^^^^^^^^^^^ a derive macro can't exist within a trait

error[E0433]: cannot find derive macro `Anything` in trait `Foo`
  --> $DIR/no-ice-on-path-style-derive-macro.rs:3:10
   |
LL | #[derive(Foo::Anything)]
   |          ^^^^^^^^^^^^^ a derive macro can't exist within a trait
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
